--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=1200">
     <meta name="description" content="Grupo Ceoquim SRL - Proveedores de aditivos alimentarios y productos químicos para industrias y comercios en Bolivia.">
     <meta name="keywords" content="aditivos alimentarios, productos químicos, ajinomoto, stevia, ácido cítrico, bicarbonato, Bolivia">
     <title>Grupo Ceoquim SRL | Aditivos Alimentarios y Productos Químicos</title>
@@ -590,4 +590,5 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
 </body>
+
 </html>
